--- a/index.html
+++ b/index.html
@@ -53,30 +53,13 @@
               </h5>
             </div>
             <div class="row-icon">
-              <a href="CV/curriculum-vitae.html" target="_blank"
+              <a
+                href="https://github.com/ojanaja/PAW-Portofolio_Web"
+                target="_blank"
                 ><i
-                  class="bx bx-link-external inline-flex items-center justify-center w-[50px] h-[50px] rounded-[50%] backdrop-brightness-[90%] text-[25px] mx-[10px] mt-[10px] shadow-md cursor-pointer ease-in duration-300"
+                  class="bx bxl-github inline-flex items-center justify-center w-[50px] h-[50px] rounded-[50%] backdrop-brightness-[90%] text-[25px] mx-[10px] mt-[10px] shadow-md cursor-pointer ease-in duration-300"
                 ></i
               ></a>
-            </div>
-          </div>
-          <h4>Fauzan</h4>
-        </div>
-        <div
-          class="row bg-[#fff] border-inherit rounded-[28px] shadow-xl p-[20px] ease-in duration-300 hover:translate-y-[5px] hover:scale-[1.03]"
-        >
-          <img
-            src="assets/img/Screenshot (18).png"
-            alt="mategoods"
-            class="h-auto width-[100%] rounded-[28px] mb-[1rem]"
-          />
-          <div class="main-row flex items-center justify-between">
-            <div class="row-text">
-              <h5 class="text-[20px] font-semibold text-[#000]">
-                Website Portofolio
-              </h5>
-            </div>
-            <div class="row-icon">
               <a href="CV/curriculum-vitae.html" target="_blank"
                 ><i
                   class="bx bx-link-external inline-flex items-center justify-center w-[50px] h-[50px] rounded-[50%] backdrop-brightness-[90%] text-[25px] mx-[10px] mt-[10px] shadow-md cursor-pointer ease-in duration-300"
