--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
               </h5>
             </div>
             <div class="row-icon">
-              <a
-                href="https://github.com/ojanaja/PAW-Portofolio_Web"
-                target="_blank"
+              <a href="https://github.com/ojanaja/PAW_Webdev" target="_blank"
                 ><i
                   class="bx bxl-github inline-flex items-center justify-center w-[50px] h-[50px] rounded-[50%] backdrop-brightness-[90%] text-[25px] mx-[10px] mt-[10px] shadow-md cursor-pointer ease-in duration-300"
                 ></i
